# src/routes/categories.routes.ts
@@ -2,9 +2,9 @@ import { Router } from "express";
 import multer from "multer";
 
 // import { CategoriesRepository } from "../modules/cars/repositories/implementations/CategoriesRepository";
-import { createCategoryController } from "../modules/cars/UseCases/createCategory";
-import { importCategoryController } from "../modules/cars/UseCases/importCategory";
-import { listCategoriesController } from "../modules/cars/UseCases/ListCategories";
+import { CreateCategoryController } from "../modules/cars/UseCases/createCategory/CreateCategoryController";
+import { ImportCategoryController } from "../modules/cars/UseCases/importCategory/ImportCategoryController";
+import { ListCategoriesController } from "../modules/cars/UseCases/ListCategories/ListCategoriesController";
 
 const categoriesRoutes = Router();
 // const categoriesRepository = new CategoriesRepository();
@@ -12,17 +12,18 @@ const upload = multer({
   dest: "./tmp",
 });
 
-categoriesRoutes.post("/", (request, response) => {
-  console.log("Reload funcionando");
-  return createCategoryController.handle(request, response);
-});
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listCategoriesController = new ListCategoriesController();
 
-categoriesRoutes.get("/", (request, response) => {
-  return listCategoriesController.handle(request, response);
-});
+categoriesRoutes.post("/", createCategoryController.handle);
 
-categoriesRoutes.post("/import", upload.single("file"), (request, response) => {
-  return importCategoryController.handle(request, response);
-});
+categoriesRoutes.get("/", listCategoriesController.handle);
+
+categoriesRoutes.post(
+  "/import",
+  upload.single("file"),
+  importCategoryController.handle
+);
 
 export { categoriesRoutes };
